--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.2",
+    "@expo/vector-icons": "^14.0.4",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/elements": "^2.2.5",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
     "expo": "~52.0.18",
     "expo-blur": "~14.0.1",
+    "expo-checkbox": "~4.0.0",
     "expo-constants": "~17.0.3",
     "expo-dev-client": "~5.0.6",
     "expo-font": "~13.0.1",
@@ -41,8 +42,7 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5",
-    "expo-checkbox": "~4.0.0"
+    "react-native-webview": "13.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
